# SEAL

./: README.thesis.md
native/examples/: 10_negative_numbers.cpp  7_fibonacci.cpp  8_additions.cpp  9_divisions.cpp  CMakeLists.txt  examples.cpp  examples.h
native/thesis/: 1_noise_growth_addition.cpp  2_noise_growth_subtraction.cpp  3_noise_growth_multiplication.cpp  4_noise_growth_division.cpp  CMakeLists.txt  thesis.cpp  thesis.h
